# rocket-data-gathering

./: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.old
components/Blink/: Blink.c  CMakeLists.txt  idf_component.yml
components/I2Cdev/: I2Cdev.cpp
components/bmp280/: .eil.yml  CMakeLists.txt  _bmp280.h  bmp280.cpp  bmp280.h  component.mk
main/: CMakeLists.txt  Kconfig.projbuild  _bmp280.cpp  bmp280.cpp  idf_component.yml  main.cpp  mpu6050.cpp
visualization/: main.py  pyproject.toml
